Update configure for maven-surefire-plugin in catpoint-parent/pom.xml