@@ -102,13 +102,14 @@
 					<version>3.8.1</version>
 				</plugin>
 				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M5</version>
-					<configuration>
-						<argLine>
-              				--add-opens com.udacity.catpoint.security/com.udacity.catpoint.security.service=ALL-UNNAMED
-            			</argLine>
-					</configuration>
+					<artifactId>maven-surefire-plugin</artifactId> 
+					<dependencies> 
+						<dependency> 
+							<groupId>org.ow2.asm</groupId> 
+							<artifactId>asm</artifactId>
+							<version>9.1</version>
+						</dependency> 
+					</dependencies>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
